@@ -9,14 +9,13 @@ use Wikibase::Datatype::Struct::Lexeme;
 
 # Test.
 my $struct_hr = {
-	'ns' => 0,
 	'type' => 'lexeme',
 };
 my $ret = Wikibase::Datatype::Struct::Lexeme::struct2obj($struct_hr);
 isa_ok($ret, 'Wikibase::Datatype::Lexeme');
 is($ret->lastrevid, undef, 'Method lastrevid().');
 is($ret->modified, undef, 'Method modified().');
-is($ret->ns, 0, 'Method ns().');
+is($ret->ns, 146, 'Method ns().');
 is($ret->title, undef, 'Method title().');
 
 # Test.
@@ -50,6 +49,5 @@ $ret = Wikibase::Datatype::Struct::Lexeme::struct2obj($struct_hr);
 isa_ok($ret, 'Wikibase::Datatype::Lexeme');
 is($ret->lastrevid, undef, 'Method lastrevid().');
 is($ret->modified, undef, 'Method modified().');
-# XXX Is it right?
-is($ret->ns, 0, 'Method ns() (undefined).');
+is($ret->ns, 146, 'Method ns() (undefined).');
 is($ret->title, undef, 'Method title().');
